Fix menu on iOS

--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -14,10 +14,6 @@
     border-right: 0;
 }
 
-.blg-menu-content {
-    top: 272px;
-}
-
 /**/
 
 .blg-menu-item {
